# backpak

./: .backpak  Cargo.toml  LICENSE.md  LICENSE.txt  README.md  TODO  TODO.txt
.github/workflows/: ci.yml
b2/: Cargo.toml  backpak.key
b2/examples/: client.rs
b2/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  formats.md  intro.md  start.md
src/: backend.rs  backup.rs  blob.rs  cat.rs  check.rs  chunk.rs  concurrently.rs  config.rs  counters.rs  diff.rs  file_util.rs  filter.rs  fs_tree.rs  hashing.rs  index.rs  init.rs  lib.rs  ls.rs  main.rs  pack.rs  prettify.rs  progress.rs  rcu.rs  read.rs  repack.rs  semaphored.rs  serialize_hash.rs  snapshot.rs  snapshots.rs  tree.rs  ui.rs  upload.rs
src/backend/: backblaze.rs  cache.rs  filter.rs  fs.rs  memory.rs  semaphored.rs
src/backup/: walk.rs
src/repack/: ui.rs
src/ui/: backup.rs  cat.rs  check.rs  copy.rs  diff.rs  dump.rs  filter_snapshot.rs  forget.rs  init.rs  ls.rs  progress.rs  prune.rs  rebuild_index.rs  restore.rs  snapshots.rs  usage.rs
src/ui/backup/: walk.rs
tests/: backup-and-rebuild-index.rs  backup-src.rs  bad-filenames.rs  common.rs  copy.rs  diff.rs  dump.rs  filter-snapshot.rs  filter.rs  prune.rs  restore.rs  resume.rs
tests/references/: README.md  index.stability  pack.stability  snapshot.stability  tree.stability
