[package]
name = "backpak"
version = "0.1.0"
authors = ["Matt Kline"]
edition = "2021"

[profile.dev]
opt-level = 2 # We want optimization even for debug builds for all the hashing.
#incremental = true # Iterate faster

[profile.release]
debug = true

[dependencies]
atty = "0.2"
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0", features = ["derive"] }
enum-map = "1.1"
fastcdc = "1.0"
hex = "0.4"
hostname = "0.3"
lazy_static = "1.0"
log = "0.4"
memmap = "0.7"
num_cpus = "1.0"
rayon = "1.4"
rustc-hash = "1.1"
serde = "1.0"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
simplelog = { version = "0.11", features = ["test", "termcolor"] }
tempfile = "3.0"
zstd = { version = "0.9", features = ["zstdmt"] }

[dev-dependencies]
assert_cmd = "1.0"
env_logger = "0.8"
hex-literal = "0.3"
nix = "0.19"
walkdir = "2.0"
