workspace = { members = ["b2"] }
[package]
name = "backpak"
description = "A content-addressed backup system with deduplication and compression"
version = "0.1.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2021"
license = "Zlib"
keywords = ["backup"]
categories = ["command-line-utilities", "compression", "filesystem"]

[dependencies]
# Sane error handling
anyhow = { version = "1.0", features = ["backtrace"] }
#
b2 = { path = "./b2" }
# Pretty-printing byte counts
byte-unit = { version = "5.0", features = ["serde"] }
# Paths are UTF-8
camino = { version = "1.0", features = ["serde1"] }
# Tick tock
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
# CBOR serde
ciborium = "0.2.1"
# Arg parsing
clap = { version = "4.0", features = ["derive"] }
# Base-32 encoding
data-encoding = "2.3"
# Stats map
enum-map = "2.5"
# Chunkin'
fastcdc = "3.0"
# I want to go $HOME.
home = "0.5"
# Default author - the hostname
hostname = "0.4"
# Memmap1 is unmaintained
memmap2 = "0.9"
# Numeric traits are nice
num = { version = "0.4", default-features = false }
# How many cores? Tell Zstd
num_cpus = "1.0"
# par_iter
rayon = "1.4"
# Snapshots LAST~N parsing
# Don't need Unicode for now.
regex = { version = "1.0", default-features = false, features = [ "std", "perf" ] }
# Local cache
rusqlite = "0.32.0"
# We don't need DDOS-resistant hashes
rustc-hash = "2.0"
# Syscalls for setting file times
rustix = { version = "0.38", default-features = false, features = [ "fs" ] }
# Praise be unto thee
serde = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
# The good hash
sha2 = "0.10"
# Persisting to temporary locations
tempfile = "3.0"
# INI config is nice
toml = "0.8"
# It's the good logger now.
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "ansi", "fmt"] }
# Thank you Yann.
zstd = { version = "0.13", features = ["zstdmt"] }

[dev-dependencies]
assert_cmd = "2.0"
hex-literal = "0.4"
predicates = "3.0"
walkdir = "2.0"
