[package]
name = "b2"
version = "0.1.0"
edition = "2021"

[dependencies]
data-encoding = "2.3"
base64 = "0.21"
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.9", features = [ "json" ] }
sha1 = "0.10"

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
camino = { version = "1.0" }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
simplelog = { version = "0.12", features = ["test", "termcolor"] }
toml = "0.8"
