[package]
name = "b2"
version = "0.1.0"
edition = "2021"

[dependencies]
data-encoding = "2.3"
base64 = "0.21"
serde_json = "1.0"
thiserror = "2.0"
ureq = { version = "2.10", features = [ "json" ] }
sha1 = "0.10"

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
camino = { version = "1.0" }
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.8"
